<resources>
    <string name="app_name">PTPN</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="lbl_et_email">Email</string>
    <string name="lbl_et_password">Password</string>
    <string name="lbl_btn_login">Login</string>
    <string name="lbl_or_login">Don\'t have an account yet?</string>
    <string name="link_register">Register</string>
    <string name="lbl_btn_register">Register</string>
    <string name="txt_title_register">Register</string>
    <string name="txt_title_login">Login</string>
    <string name="link_forgot_password">Forgot Password</string>
    <string name="txt_title_forgot_password">Forgot Password</string>
    <string name="lbl_btn_forgot_password">Forgot Password</string>
    <string name="toast_success_send_verify_account">Open Your e-mail to verify account</string>
    <string name="toast_success_send_forgot_password">Open Your e-mail to reset password</string>
    <string name="txt_error_email">Invalid e-mail format</string>
    <string name="txt_error_password">Password must be contains alphabet and number and longer than 5 characters</string>
    <string name="txt_error_account_not_verified">Your account has not been verified</string>
    <string name="txt_error_account_not_register">your account is not registered</string>
    <string name="lbl_date">Tanggal :</string>
    <string name="lbl_expired">Expired :</string>
    <string name="lbl_afdeling">Afdeling</string>
    <string name="lbl_kategori">Kategori</string>
    <string name="lbl_pta">PTA</string>
    <string name="lbl_deskripsi">Deskripsi</string>
    <string name="title_spta">SPTA</string>
    <string name="title_delivery_order">Delivery Order</string>
    <string name="lbl_btn_no">No</string>
    <string name="lbl_btn_yes">Yes</string>
    <string name="title_dialog_exit">Logout</string>
    <string name="desc_dialog_exit">are you sure you want to exit?</string>
    <string name="btn_desc_add">Add</string>
    <string name="txt_lbl_sopir">Sopir :</string>
    <string name="txt_lbl_no_lori">No. Lori :</string>
    <string name="txt_lbl_no_truk">No. Truk :</string>
    <string name="txt_empty_page">Page is empty</string>
    <string name="txt_title_detail_delivery_order">Detail Delivery Order</string>
    <string name="et_lbl_luas">Luas</string>
    <string name="et_lbl_tanggal">Tanggal</string>
    <string name="et_lbl_brix">Brix</string>
    <string name="et_lbl_ph">PH</string>
    <string name="et_lbl_tertebang">Tertebang</string>
    <string name="et_lbl_terbakar">Terbakar</string>
    <string name="et_lbl_sopir">Sopir</string>
    <string name="et_lbl_nama">Nama</string>
    <string name="et_lbl_no_lori">No.Lori</string>
    <string name="et_lbl_nopol_truk">Nopol.Truk</string>
    <string name="lbl_btn_simpan">Simpan</string>
    <string name="lbl_btn_cetak">Cetak</string>
    <string name="txt_radio_no">No</string>
    <string name="txt_radio_yes">Yes</string>
    <string name="success_update_do">Sukses, Data telah tersimpan</string>
    <string name="failed_update_do">Data gagal tersimpan</string>
    <string name="access_bluetooth_denied">Akses ke bluetooth tidak diizinkan</string>
    <string name="title_dialog_error_connect_print">Gagal Menghubungkan printer</string>
    <string name="desc_dialog_error_connect_print">Pastikan bluetooth smartphone anda telah terhubung dengan printer</string>
    <string name="search_delivery_order">Cari Sopir</string>
</resources>